# ctr-prediction

./: .gitignore  README.md  executive_summary.md  main.py  pipeline_config.yml  pyproject.toml
artifacts/features/campaign_features/: features.parquet  metadata.json
artifacts/features/imputation/: campaign_imputation.json  publisher_imputation.json
artifacts/features/publisher_features/: features.parquet  metadata.json
artifacts/features/test_features/: metadata.json
artifacts/features/train_features/: metadata.json
artifacts/model/: config.json  large_audience.json  small_audience.json
notebooks/: ctr_data_exploration.ipynb  ctr_ensemble_model.py  ctr_exploration.py  data_exploration.ipynb  embedding_ctr_analysis.py  mae_by_opens_bins.py  publication_clustering.py  variance_explainability.py  xgboost-2fold.py  xgboost_ctr_model.py
scripts/: stress_test.py
src/: __init__.py  main.py
src/api/: __init__.py  app.py  config.py  dtos.py  service.py
src/domain/: __init__.py  entities.py  protocols.py
src/feature_store/: __init__.py  feature_store.py
src/features/: __init__.py  feature_engineering.py
src/metrics/: __init__.py  metrics.py
src/models/: __init__.py  xgboost_ensemble.py
src/pipelines/: __init__.py  config.py  evaluation.py  prediction.py  training.py
