[project]
name = "ctr-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.14"
dependencies = [
    "duckdb>=1.4.3",
    "marimo>=0.10.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "polars>=1.37.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=2.2.0",
    "xgboost>=2.0.0",
]
